# water-dispenser

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  VL53L0X.c  VL53L0X.h  app_HX711.c  app_HX711.h  app_TOF.c  app_TOF.h  app_adc.c  app_adc.h  app_button.c  app_button.h  app_config_flash.c  app_config_flash.h  app_led.c  app_led.h  app_moter.c  app_moter.h  app_nvs.c  app_nvs.h  app_sensor.c  app_sensor.h  gpio_util.c  gpio_util.h  idf_component.yml  ippe_util.c  ippe_util.h  jbx-list.c  jbx-list.h  main.c  motion_task.c  motion_task.h  opmode_task.c  opmode_task.h  spiffs_util.c  spiffs_util.h
main/ble/: ble_parse.c  ble_parse.h  ble_task.c  ble_task.h  ble_util.c  ble_util.h
main/cli/: FreeRTOS_CLI.c  FreeRTOS_CLI.h  config_cli.c  config_cli.h  debug_cli.c  debug_cli.h  set_cli.c  set_cli.h
main/mqtt/: mqtt_main.c  mqtt_main.h  mqtt_parse.c  mqtt_parse.h
main/vl53l0x/core/src/: vl53l0x_api_core.c
main/wifi/: http_ota.c  simple_ota_example.c  simple_ota_example.h  tcp_client_main.c  tcp_client_v4.c  tcp_server.c  tcp_server.h  wifi_task.c  wifi_task.h  wifi_util.c  wifi_util.h
